WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224719
Don't omit conic gradient starting angle when serializing when starting angle is under 0
https://bugs.webkit.org/show_bug.cgi?id=224719
Summary
Don't omit conic gradient starting angle when serializing when starting angle...
Tim Nguyen (:ntim)
Reported
2021-04-17 09:14:49 PDT
Regressed by
bug 223892
`conic-gradient(from -2deg, red, blue)` serializes to `conic-gradient(red, blue)` which is incorrect.
Attachments
Patch
(6.32 KB, patch)
2021-04-17 09:33 PDT
,
Tim Nguyen (:ntim)
no flags
Details
Formatted Diff
Diff
Patch
(6.31 KB, patch)
2021-04-17 10:51 PDT
,
Tim Nguyen (:ntim)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-04-17 09:14:57 PDT
<
rdar://problem/76800507
>
Tim Nguyen (:ntim)
Comment 2
2021-04-17 09:33:02 PDT
Created
attachment 426333
[details]
Patch
EWS Watchlist
Comment 3
2021-04-17 09:33:54 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Tim Nguyen (:ntim)
Comment 4
2021-04-17 09:51:30 PDT
https://github.com/web-platform-tests/wpt/pull/28562
Tim Nguyen (:ntim)
Comment 5
2021-04-17 10:51:56 PDT
Created
attachment 426337
[details]
Patch
EWS
Comment 6
2021-04-17 12:02:12 PDT
Committed
r276203
(
236685@main
): <
https://commits.webkit.org/236685@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426337
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug