Don't omit conic gradient starting angle when serializing when starting angle is under 0 https://bugs.webkit.org/show_bug.cgi?id=224719

Patch by Tim Nguyen <ntim@apple.com> on 2021-04-17
Reviewed by Ryosuke Niwa.

Updated pre-existing test to cover this case.

Test: LayoutTests/imported/w3c/web-platform-tests/css/css-backgrounds/parsing/background-image-computed.sub.html

LayoutTests/imported/w3c:

* web-platform-tests/css/css-backgrounds/parsing/background-image-computed.sub-expected.txt:
* web-platform-tests/css/css-backgrounds/parsing/background-image-computed.sub.html:

Source/WebCore:

* css/CSSGradientValue.cpp:
(WebCore::CSSConicGradientValue::customCSSText const):

Canonical link: https://commits.webkit.org/236685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276203 268f45cc-cd09-0410-ab3c-d52691b4dbfc